# HomeWork-11.1

./: .coverage  README.md  main.py  pyproject.toml
htmlcov/: .gitignore  class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_transactions_py.html  z_145eef247bfb46b6_widget_py.html
src/: generators.py  processing.py
tests/: conftest.py  test_generators.py  test_masks.py  test_processing.py
